@@ -20,6 +20,13 @@ dependencies {
     // TMP: vertx
     implementation 'io.vertx:vertx-web:4.0.2'
 
+    // https://mvnrepository.com/artifact/javax.mail/mail
+    implementation group: 'javax.mail', name: 'mail', version: '1.5.0-b01'
+
+    // https://mvnrepository.com/artifact/com.google.guava/guava
+    implementation group: 'com.google.guava', name: 'guava', version: '30.1-jre'
+
+
     // jsoup HTML parser library @ https://jsoup.org/
     implementation 'org.jsoup:jsoup:1.13.1'
 
@@ -61,6 +68,16 @@ task server (type:JavaExec) {
     jvmArgs('-Dfile.encoding=UTF-8') 
     standardInput = System.in
 }
+
+task testEmail (type:JavaExec) {
+    dependsOn 'classes'
+    main = 'ca.aquiletour.server.email.TestEmail'
+    classpath = sourceSets.main.runtimeClasspath
+    //jvmArgs('-Dfile.encoding=UTF-8','-Xverify:none') // -Xverify:none for profiling in jvisualvm 
+    jvmArgs('-Dfile.encoding=UTF-8') 
+    standardInput = System.in
+}
+
 
 task vertx (type:JavaExec) {
     dependsOn 'classes'
